classDiagram

class User {
    +int id
    +string name
    +string email
    +string password
    +timestamp created_at
    +timestamp updated_at
}

class Job {
    +int id
    +string title
    +string description
    +string company
    +image string
    +timestamp created_at
    +timestamp updated_at
}

class Skill {
    +int id
    +string name
    +timestamp created_at
    +timestamp updated_at
}

User "1" --> "0..*" Job : posts
Job "0..*" -- "0..*" Skill : requires